@@ -6,7 +6,7 @@ PACKAGE=smime
 dnl plugin version
 MAJOR_VERSION=0
 MINOR_VERSION=5
-MICRO_VERSION=1
+MICRO_VERSION=2
 EXTRA_VERSION=0
 
 if test \( $EXTRA_VERSION -eq 0 \); then
